--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": ".eleventy.js",
   "scripts": {
     "start": "run-p start:*",
-    "start:eleventy": "eleventy --serve --incremental",
+    "start:eleventy": "ELEVENTY_ENV=development eleventy --serve --incremental",
     "start:tailwind": "npx @tailwindcss/cli -i css/tailwind.css -c css/tailwind.config.js -o dist/css/style.css --watch",
     "build": "run-p build:*",
-    "build:eleventy": "eleventy",
+    "build:eleventy": "ELEVENTY_ENV=production eleventy",
     "build:tailwind": "npx @tailwindcss/cli -i css/tailwind.css -c css/tailwind.config.js -o dist/css/style.css"
   },
   "keywords": [],
