--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ yarn-error.log*
 
 # Build outputs
 _site/
-dist/
+dist/*
+!dist/resources/
+!dist/resources/.keep
 build/
 
 # Environment variables
