--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@ yarn-error.log*
 
 # Build outputs
 _site/
-dist/*
-!dist/resources/
-!dist/resources/.keep
+dist/
 build/
 
 # Environment variables
